# battle_dungeons

./: .gitignore  AUTHORS  Makefile.in  NEWS  README  README.md  README_com.txt  autogen.sh  config.h.in  configure  configure.ac
data/: armas.db  enemigos.db  entities.rpg  hechizos.db  maps.rpg  maps_correcto.rpg  maps_error_simbolo.rpg  maps_error_sintactico.rpg  materials.rpg
demo/: demo_2007.swf
ideas/: Battle_Dungeons_Manual.txt  battle.txt  lol
include/: ascii_art.h  battle.h  character.h  color.h  colors.h  combat.h  dices.h  engine.h  errors.h  files.h  global.h  grid.h  interpreter.h  magic.h  menus.h  parser.h  scripting.h  story.h  symtable.h  ui.h  windows.h
src/: Makefile.am  Makefile.in  Makefile_OR  ascii_art.c  battle.c  character.c  color.c  colors.c  combat.c  dices.c  dices.cpp  enemies.c  errors.c  files.c  grid.c  interpreter.c  inventory.c  main.c  menus.c  objetos.c  parser.c  parser.l  parser.y  scripting.c  scripting.l  scripting.y  spells.c  story.c  symtable.c  ui.c  windows.c
src/scripting/: Makefile  eval.l  eval.y  main.c
src/scripting/doc/: Makefile  eval.l  eval.y
src/scripting/rpg/: entities.rpg  maps.rpg  materials.rpg
